# grepl_scraper

./: pyproject.toml
src/grepl/: dino_scratch.ipynb
src/grepl/processing/: video.py
src/grepl/scrape/: README.md  parse_outlier.py  parse_video_url.py  scrape_outlier.py  video_clip_downloader.py
